compile_errors.txt
cargo :     Checking 
game-engine v0.1.0 (C:
\proiecte-vue\monopoly
-world-edition\backend
\game-engine)
At line:1 char:1
+ cargo check 
--manifest-path backen
d/server/Cargo.toml 
2>&1 | Out-File ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng ga...nd\game-e    
ngine):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1435:45
     |
1435 |                
 self.players[idx].add
_money(amount);
     |                
                   
--------- ^^^^^^ 
expected `i32`, found 
`u32`
     |                
                   |
     |                
                   
arguments to this 
method are incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:54:12
     |
  54 |     pub fn 
add_money(&mut self, 
amount: i32) {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1435 |                
 self.players[idx].add
_money(amount.try_into
().unwrap());
     |                
                      
             
++++++++++++++++++++

error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1468:45
     |
1468 |                
 self.players[idx].add
_money(gain);
     |                
                   
--------- ^^^^ 
expected `i32`, found 
`u32`
     |                
                   |
     |                
                   
arguments to this 
method are incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:54:12
     |
  54 |     pub fn 
add_money(&mut self, 
amount: i32) {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1468 |                
 self.players[idx].add
_money(gain.try_into()
.unwrap());
     |                
                      
           
++++++++++++++++++++

error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1481:54
     |
1481 |                
         if self.playe
rs[i].pay_money(amount
) {
     |                
                      
      --------- 
^^^^^^ expected 
`i32`, found `u32`
     |                
                      
      |
     |                
                      
      arguments to 
this method are 
incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:58:12
     |
  58 |     pub fn 
pay_money(&mut self, 
amount: i32) -> bool {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1481 |                
         if self.playe
rs[i].pay_money(amount
.try_into().unwrap()) 
{
     |                
                      
                      
++++++++++++++++++++

error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1482:57
     |
1482 | ...            
       self.players[id
x].add_money(amount);
     |                
                      
   --------- ^^^^^^ 
expected `i32`, found 
`u32`
     |                
                      
   |
     |                
                      
   arguments to this 
method are incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:54:12
     |
  54 |     pub fn 
add_money(&mut self, 
amount: i32) {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1482 |                
             self.play
ers[idx].add_money(amo
unt.try_into().unwrap(
));
     |                
                      
                      
   
++++++++++++++++++++

error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1613:57
     |
1613 |                
          if self.play
ers[idx].pay_money(pri
ce) {
     |                
                      
         --------- 
^^^^^ expected `i32`, 
found `u32`
     |                
                      
         |
     |                
                      
         arguments to 
this method are 
incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:58:12
     |
  58 |     pub fn 
pay_money(&mut self, 
amount: i32) -> bool {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1613 |                
          if self.play
ers[idx].pay_money(pri
ce.try_into().unwrap()
) {
     |                
                      
                      
  ++++++++++++++++++++

error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1614:60
     |
1614 | ...            
       self.players[t_
idx].add_money(price);
     |                
                      
     --------- ^^^^^ 
expected `i32`, found 
`u32`
     |                
                      
     |
     |                
                      
     arguments to 
this method are 
incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:54:12
     |
  54 |     pub fn 
add_money(&mut self, 
amount: i32) {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1614 |                
              self.pla
yers[t_idx].add_money(
price.try_into().unwra
p());
     |                
                      
                      
     
++++++++++++++++++++

error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1719:58
     |
1719 |                
     if self.players[o
wner_idx].pay_money(ta
x) {
     |                
                      
          --------- 
^^^ expected `i32`, 
found `u32`
     |                
                      
          |
     |                
                      
          arguments 
to this method are 
incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:58:12
     |
  58 |     pub fn 
pay_money(&mut self, 
amount: i32) -> bool {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1719 |                
     if self.players[o
wner_idx].pay_money(ta
x.try_into().unwrap())
 {
     |                
                      
                      
 ++++++++++++++++++++

error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1720:60
     |
1720 |                
         self.players[
player_idx].add_money(
tax);
     |                
                      
            --------- 
^^^ expected `i32`, 
found `u32`
     |                
                      
            |
     |                
                      
            arguments 
to this method are 
incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:54:12
     |
  54 |     pub fn 
add_money(&mut self, 
amount: i32) {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1720 |                
         self.players[
player_idx].add_money(
tax.try_into().unwrap(
));
     |                
                      
                      
   
++++++++++++++++++++

error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1744:55
     |
1744 |                
 if self.players[playe
r_idx].pay_money(tax) 
{
     |                
                      
       --------- ^^^ 
expected `i32`, found 
`u32`
     |                
                      
       |
     |                
                      
       arguments to 
this method are 
incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:58:12
     |
  58 |     pub fn 
pay_money(&mut self, 
amount: i32) -> bool {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1744 |                
 if self.players[playe
r_idx].pay_money(tax.t
ry_into().unwrap()) {
     |                
                      
                    
++++++++++++++++++++

error[E0308]: 
mismatched types
    --> game-engine\sr
c\game.rs:1745:55
     |
1745 |                
     self.players[owne
r_idx].add_money(tax);
     |                
                      
       --------- ^^^ 
expected `i32`, found 
`u32`
     |                
                      
       |
     |                
                      
       arguments to 
this method are 
incorrect
     |
note: method defined 
here
    --> game-engine\sr
c\player.rs:54:12
     |
  54 |     pub fn 
add_money(&mut self, 
amount: i32) {
     |            
^^^^^^^^^            
-----------
help: you can convert 
a `u32` to an `i32` 
and panic if the 
converted value 
doesn't fit
     |
1745 |                
     self.players[owne
r_idx].add_money(tax.t
ry_into().unwrap());
     |                
                      
                    
++++++++++++++++++++

For more information 
about this error, try 
`rustc --explain 
E0308`.
error: could not 
compile `game-engine` 
(lib) due to 10 
previous errors
